update posttitle margin

--- a/themes/jiafei_cactus/static/css/style-classic.css
+++ b/themes/jiafei_cactus/static/css/style-classic.css
@@ -1073,7 +1073,7 @@ body {
 }
 article header .posttitle {
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 0.3em;
   text-transform: none;
   font-size: 1.5em;
   line-height: 1.25;
