--- a/themes/jiafei_cactus/layouts/others/single.html
+++ b/themes/jiafei_cactus/layouts/others/single.html
@@ -46,7 +46,7 @@
             {{ if gt $index 1 }} {{ print ", " }} {{ end }}
             <a class="tag-link" href="{{ "/tags/" | relLangURL }}{{ $value | urlize }}" rel="tag">{{ $value }}</a>
             {{ end }}
-        </div> 
+        </div>
         {{ end }}
       </div>
     </header>
@@ -65,6 +65,8 @@
     </div>
   </article>
 
+  {{ partial "arrow.html" . }}
+  
   {{ partial "comments.html" . }}
 
   {{ partial "page_nav_mobile.html" . }}
