--- a/themes/jiafei_cactus/layouts/posts/single.html
+++ b/themes/jiafei_cactus/layouts/posts/single.html
@@ -43,7 +43,7 @@
         <div class="article-tag">
             <i class="fas fa-tag"></i>
             {{ range $index, $value := .Params.tags }}
-            {{ if gt $index 1 }} {{ print ", " }} {{ end }}
+            {{ if gt $index 1 }} {{ print "" }} {{ end }}
             <a class="tag-link" href="{{ "/tags/" | relLangURL }}{{ $value | urlize }}" rel="tag">{{ $value }}</a>
             {{ end }}
         </div>
@@ -64,6 +64,7 @@
       {{ .Content}}
     </div>
   </article>
+  {{ partial "arrow.html" . }}
 
   {{ partial "comments.html" . }}
 
