--- a/themes/jiafei_cactus/layouts/partials/favicon.html
+++ b/themes/jiafei_cactus/layouts/partials/favicon.html
@@ -1,2 +1,3 @@
-<!-- TODO -->
-<link rel="icon" type="image/png" href="{{ "images/favicon.ico"  | absURL }}" />
+<link rel="shortcut icon" href= "{{ "images/favicon.ico"  | relURL }}" />
+<link rel="icon" type="image/png" href="{{ "images/favicon.ico"  | relURL }}" />
+
